--- a/style.css
+++ b/style.css
@@ -1,38 +1,135 @@
 
 body{
     display:flex;
-    /* justify-content: center;
-    align-items: center; */
     font-family:monospace;
 }
 
 .main{
+    /* styles and seperates the screen from the bottom  */
     display: flex;
     flex-direction: column-reverse;
     display:flex;
     height: 450px;
-    width: 350px;
+    width: 340px;
     margin: auto;
     margin-top: 200px;
-    color: black;
-    background-color: lightslategray;
+    background-color: rgb(90, 20, 71);;
 
 }
 
-.numbers{
-    margin-top: 20px;
+.bottom{
+    /* styles the bottom */
     height: 350px;
-    width: 350px;
-    background: lightgreen;
+    width: 340px;
+    background-color:rgb(90, 20, 71);
 }
 
 .screen{
-    margin-left: 20px;
-    margin-right: 20px;
-    width: 305px;
-    height: 60px;
-    background-color: aqua;
+    /* does the blue thing where the numbers will appear */
+    /* margin-left: px;
+    margin-right: 5px; */
+    margin:auto;
+    margin-left: 15px;
+    width: 308px;
+    height: 75px;
+    background-color: rgb(179, 148, 171);;
+    border: 3px solid black;
+}
 
 
+.buttons{
+
+    display: flex;
+    flex-wrap: wrap;
+    width: 330px;
+    height: 335px;
+    /* border: 3px solid black; delete this after */
+    margin: auto;
+    margin-left: 10px;
+}
+
+
+.b{
+    display: flex;
+    height:50px;
+    width:60px;
+    background-color: aquamarine;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 11px;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid black;
+    font-weight: bold;
+    font-size: 25px;
+    
+}
+
+.dark{
+    background-color: rgb(228, 76, 134);
+}
+
+.side{
+    background-color: rgb(199, 72, 180);
+}
+
+.num{
+    background-color: rgb(225, 140, 188);
+}
+
+.zero{
+    width: 141px;
+    background-color: rgb(225, 140, 188);
+    margin-right: 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .split{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 10px;
 
 }
+
+
+.numbers{
+    display: flex;
+    flex-wrap: wrap;
+    height: 90px;
+    width: 210px;
+
+}
+
+.operators{
+    height: 60px;
+    width: 60px;
+    background-color: rgb(241, 144, 241);
+    /* margin-left: 50px; */
+    /* margin-right: 30px;
+}
+
+.num{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+
+    height: 60px;
+    width: 60px;
+    background-color:rgb(231, 220, 222);
+    margin-bottom: 15px;
+    margin-right: 10px;
+} */ 
