--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body{
 .main{
     /* styles and seperates the screen from the bottom  */
     display: flex;
-    flex-direction: column-reverse;
-    display:flex;
+    flex-direction: column;
     height: 450px;
     width: 340px;
     margin: auto;
@@ -38,32 +37,49 @@ body{
 
 
 .buttons{
-
     display: flex;
     flex-wrap: wrap;
-    width: 330px;
+    width: 315px;
     height: 335px;
-    /* border: 3px solid black; delete this after */
+    border: 3px solid black; 
     margin: auto;
     margin-left: 10px;
 }
 
 
-.b{
-    display: flex;
-    height:50px;
-    width:60px;
-    background-color: aquamarine;
+.btn{
+    height: 60px;
+    width:73px;
     margin-top: 5px;
     margin-left: 5px;
-    margin-right: 11px;
+    /* margin-right: 11px; */ 
     align-items: center;
     justify-content: center;
-    border: 3px solid black;
+    border: 3px solid black; 
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
     
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .dark{
     background-color: rgb(228, 76, 134);
@@ -78,10 +94,9 @@ body{
 }
 
 .zero{
-    width: 141px;
+    width: 151px;
     background-color: rgb(225, 140, 188);
-    margin-right: 12px;
-}
+} 
 
 
 
@@ -96,40 +111,3 @@ body{
 
 
 
-/* .split{
-    display: flex;
-    flex-direction: row-reverse;
-    margin-top: 10px;
-
-}
-
-
-.numbers{
-    display: flex;
-    flex-wrap: wrap;
-    height: 90px;
-    width: 210px;
-
-}
-
-.operators{
-    height: 60px;
-    width: 60px;
-    background-color: rgb(241, 144, 241);
-    /* margin-left: 50px; */
-    /* margin-right: 30px;
-}
-
-.num{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-
-
-    height: 60px;
-    width: 60px;
-    background-color:rgb(231, 220, 222);
-    margin-bottom: 15px;
-    margin-right: 10px;
-} */ 
