--- a/style.css
+++ b/style.css
@@ -29,10 +29,14 @@ body{
     margin-right: 5px; */
     margin:auto;
     margin-left: 15px;
-    width: 308px;
-    height: 75px;
-    background-color: rgb(179, 148, 171);;
-    border: 3px solid black;
+    width: 303px;
+    height: 80px;
+    background-color: rgb(213, 185, 206);;
+    border: 3px solid palevioletred;
+
+    font-size: 70px;
+    text-align: right;
+
 }
 
 
@@ -41,7 +45,7 @@ body{
     flex-wrap: wrap;
     width: 315px;
     height: 335px;
-    border: 3px solid black; 
+    /* border: 3px solid black;  */
     margin: auto;
     margin-left: 10px;
 }
@@ -55,29 +59,15 @@ body{
     /* margin-right: 11px; */ 
     align-items: center;
     justify-content: center;
-    border: 3px solid black; 
+    border: 1px solid palevioletred;
     font-weight: bold;
     font-size: 20px;
-    
+    border-radius:5px;  
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.btn:active {
+    box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.5); 
+}
 
 
 
